reference/5.1/Microsoft.PowerShell.Utility/Microsoft.PowerShell.Utility.md
---
Download Help Link: https://go.microsoft.com/fwlink/?linkid=390787
Help Version: 5.2.0.0
keywords: powershell,applet de commande
Locale: en-US
Module Guid: 1da87e53-152b-403e-98dc-74d7b4d63d59
Module Name: Microsoft.PowerShell.Utility
ms.date: 06/09/2017
schema: 2.0.0
title: Microsoft.PowerShell.Utility
ms.openlocfilehash: 8599ac6b6d6449e72eb76156cbe34de469fcfa1e
ms.sourcegitcommit: 9d95532afe81c235c8094eae28ab84b2f77f8c48
ms.translationtype: MT
ms.contentlocale: fr-FR
ms.lasthandoff: 10/07/2020
ms.locfileid: "93206386"
---
# <span data-ttu-id="a2fd8-103">Module Microsoft.PowerShell.Utility</span><span class="sxs-lookup"><span data-stu-id="a2fd8-103">Microsoft.PowerShell.Utility Module</span></span>

## <span data-ttu-id="a2fd8-104">Description</span><span class="sxs-lookup"><span data-stu-id="a2fd8-104">Description</span></span>

<span data-ttu-id="a2fd8-105">Cette section contient les rubriques d’aide pour les applets de commande qui sont installées avec le module Microsoft. PowerShell. Utility.</span><span class="sxs-lookup"><span data-stu-id="a2fd8-105">This section contains the help topics for the cmdlets that are installed with the Microsoft.PowerShell.Utility module.</span></span> <span data-ttu-id="a2fd8-106">Ce module contient des applets de commande qui gèrent les fonctionnalités de base de PowerShell.</span><span class="sxs-lookup"><span data-stu-id="a2fd8-106">This module contains cmdlets that manage the basic features of PowerShell.</span></span>

## <span data-ttu-id="a2fd8-107">Applets de commande Microsoft. PowerShell. Utility</span><span class="sxs-lookup"><span data-stu-id="a2fd8-107">Microsoft.PowerShell.Utility Cmdlets</span></span>

### [<span data-ttu-id="a2fd8-108">Add-Member</span><span class="sxs-lookup"><span data-stu-id="a2fd8-108">Add-Member</span></span>](Add-Member.md)
<span data-ttu-id="a2fd8-109">Ajoute des propriétés et des méthodes personnalisées à une instance d’un objet PowerShell.</span><span class="sxs-lookup"><span data-stu-id="a2fd8-109">Adds custom properties and methods to an instance of a PowerShell object.</span></span>

### [<span data-ttu-id="a2fd8-110">Add-Type</span><span class="sxs-lookup"><span data-stu-id="a2fd8-110">Add-Type</span></span>](Add-Type.md)
<span data-ttu-id="a2fd8-111">Ajoute une classe Microsoft .NET Framework à une session PowerShell.</span><span class="sxs-lookup"><span data-stu-id="a2fd8-111">Adds a Microsoft .NET Framework class to a PowerShell session.</span></span>

### [<span data-ttu-id="a2fd8-112">Clear-Variable</span><span class="sxs-lookup"><span data-stu-id="a2fd8-112">Clear-Variable</span></span>](Clear-Variable.md)
<span data-ttu-id="a2fd8-113">Supprime la valeur d'une variable.</span><span class="sxs-lookup"><span data-stu-id="a2fd8-113">Deletes the value of a variable.</span></span>

### [<span data-ttu-id="a2fd8-114">Compare-Object</span><span class="sxs-lookup"><span data-stu-id="a2fd8-114">Compare-Object</span></span>](Compare-Object.md)
<span data-ttu-id="a2fd8-115">Compare deux ensembles d'objets.</span><span class="sxs-lookup"><span data-stu-id="a2fd8-115">Compares two sets of objects.</span></span>

### [<span data-ttu-id="a2fd8-116">Convert-String</span><span class="sxs-lookup"><span data-stu-id="a2fd8-116">Convert-String</span></span>](Convert-String.md)
<span data-ttu-id="a2fd8-117">Met en forme une chaîne pour qu’elle corresponde à des exemples.</span><span class="sxs-lookup"><span data-stu-id="a2fd8-117">Formats a string to match examples.</span></span>

### [<span data-ttu-id="a2fd8-118">ConvertFrom-Csv</span><span class="sxs-lookup"><span data-stu-id="a2fd8-118">ConvertFrom-Csv</span></span>](ConvertFrom-Csv.md)
<span data-ttu-id="a2fd8-119">Convertit les propriétés d'un objet au format CSV (valeurs séparées par des virgules) en versions CSV des objets d'origine.</span><span class="sxs-lookup"><span data-stu-id="a2fd8-119">Converts object properties in comma-separated value (CSV) format into CSV versions of the original objects.</span></span>

### [<span data-ttu-id="a2fd8-120">ConvertFrom-Json</span><span class="sxs-lookup"><span data-stu-id="a2fd8-120">ConvertFrom-Json</span></span>](ConvertFrom-Json.md)
<span data-ttu-id="a2fd8-121">Convertit une chaîne au format JSON en objet personnalisé.</span><span class="sxs-lookup"><span data-stu-id="a2fd8-121">Converts a JSON-formatted string to a custom object.</span></span>

### [<span data-ttu-id="a2fd8-122">ConvertFrom-SddlString</span><span class="sxs-lookup"><span data-stu-id="a2fd8-122">ConvertFrom-SddlString</span></span>](ConvertFrom-SddlString.md)
<span data-ttu-id="a2fd8-123">Convertit une chaîne SDDL en objet personnalisé.</span><span class="sxs-lookup"><span data-stu-id="a2fd8-123">Converts a SDDL string to a custom object.</span></span>

### [<span data-ttu-id="a2fd8-124">ConvertFrom-String</span><span class="sxs-lookup"><span data-stu-id="a2fd8-124">ConvertFrom-String</span></span>](ConvertFrom-String.md)
<span data-ttu-id="a2fd8-125">Extrait et analyse les propriétés structurées à partir du contenu de chaîne.</span><span class="sxs-lookup"><span data-stu-id="a2fd8-125">Extracts and parses structured properties from string content.</span></span>

### [<span data-ttu-id="a2fd8-126">ConvertFrom-StringData</span><span class="sxs-lookup"><span data-stu-id="a2fd8-126">ConvertFrom-StringData</span></span>](ConvertFrom-StringData.md)
<span data-ttu-id="a2fd8-127">Convertit une chaîne contenant une ou plusieurs paires clé/valeur en une table de hachage.</span><span class="sxs-lookup"><span data-stu-id="a2fd8-127">Converts a string containing one or more key and value pairs to a hash table.</span></span>

### [<span data-ttu-id="a2fd8-128">ConvertTo-Csv</span><span class="sxs-lookup"><span data-stu-id="a2fd8-128">ConvertTo-Csv</span></span>](ConvertTo-Csv.md)
<span data-ttu-id="a2fd8-129">Convertit des objets .NET en une série de chaînes de valeurs séparées par des virgules (CSV).</span><span class="sxs-lookup"><span data-stu-id="a2fd8-129">Converts .NET objects into a series of comma-separated value (CSV) strings.</span></span>

### [<span data-ttu-id="a2fd8-130">ConvertTo-Html</span><span class="sxs-lookup"><span data-stu-id="a2fd8-130">ConvertTo-Html</span></span>](ConvertTo-Html.md)
<span data-ttu-id="a2fd8-131">Convertit les objets .NET en code HTML qui peut être affiché dans un navigateur web.</span><span class="sxs-lookup"><span data-stu-id="a2fd8-131">Converts .NET objects into HTML that can be displayed in a Web browser.</span></span>

### [<span data-ttu-id="a2fd8-132">ConvertTo-Json</span><span class="sxs-lookup"><span data-stu-id="a2fd8-132">ConvertTo-Json</span></span>](ConvertTo-Json.md)
<span data-ttu-id="a2fd8-133">Convertit un objet en une chaîne au format JSON.</span><span class="sxs-lookup"><span data-stu-id="a2fd8-133">Converts an object to a JSON-formatted string.</span></span>

### [<span data-ttu-id="a2fd8-134">ConvertTo-Xml</span><span class="sxs-lookup"><span data-stu-id="a2fd8-134">ConvertTo-Xml</span></span>](ConvertTo-Xml.md)
<span data-ttu-id="a2fd8-135">Crée une représentation XML d'un objet.</span><span class="sxs-lookup"><span data-stu-id="a2fd8-135">Creates an XML-based representation of an object.</span></span>

### [<span data-ttu-id="a2fd8-136">Debug-Runspace</span><span class="sxs-lookup"><span data-stu-id="a2fd8-136">Debug-Runspace</span></span>](Debug-Runspace.md)
<span data-ttu-id="a2fd8-137">Démarre une session de débogage interactive avec une instance d’exécution.</span><span class="sxs-lookup"><span data-stu-id="a2fd8-137">Starts an interactive debugging session with a runspace.</span></span>

### [<span data-ttu-id="a2fd8-138">Disable-PSBreakpoint</span><span class="sxs-lookup"><span data-stu-id="a2fd8-138">Disable-PSBreakpoint</span></span>](Disable-PSBreakpoint.md)
<span data-ttu-id="a2fd8-139">Désactive les points d'arrêt dans la console active.</span><span class="sxs-lookup"><span data-stu-id="a2fd8-139">Disables the breakpoints in the current console.</span></span>

### [<span data-ttu-id="a2fd8-140">Disable-RunspaceDebug</span><span class="sxs-lookup"><span data-stu-id="a2fd8-140">Disable-RunspaceDebug</span></span>](Disable-RunspaceDebug.md)
<span data-ttu-id="a2fd8-141">Désactive le débogage sur un ou plusieurs instances d’exécution et libère tout arrêt du débogueur en attente.</span><span class="sxs-lookup"><span data-stu-id="a2fd8-141">Disables debugging on one or more runspaces, and releases any pending debugger stop.</span></span>

### [<span data-ttu-id="a2fd8-142">Enable-PSBreakpoint</span><span class="sxs-lookup"><span data-stu-id="a2fd8-142">Enable-PSBreakpoint</span></span>](Enable-PSBreakpoint.md)
<span data-ttu-id="a2fd8-143">Active les points d'arrêt dans la console active.</span><span class="sxs-lookup"><span data-stu-id="a2fd8-143">Enables the breakpoints in the current console.</span></span>

### [<span data-ttu-id="a2fd8-144">Enable-RunspaceDebug</span><span class="sxs-lookup"><span data-stu-id="a2fd8-144">Enable-RunspaceDebug</span></span>](Enable-RunspaceDebug.md)
<span data-ttu-id="a2fd8-145">Active le débogage sur instances d’exécution où un point d’arrêt est conservé jusqu’à ce qu’un débogueur soit attaché.</span><span class="sxs-lookup"><span data-stu-id="a2fd8-145">Enables debugging on runspaces where any breakpoint is preserved until a debugger is attached.</span></span>

### [<span data-ttu-id="a2fd8-146">Export-Alias</span><span class="sxs-lookup"><span data-stu-id="a2fd8-146">Export-Alias</span></span>](Export-Alias.md)
<span data-ttu-id="a2fd8-147">Exporte des informations sur les alias actuellement définis dans un fichier.</span><span class="sxs-lookup"><span data-stu-id="a2fd8-147">Exports information about currently defined aliases to a file.</span></span>

### [<span data-ttu-id="a2fd8-148">Export-Clixml</span><span class="sxs-lookup"><span data-stu-id="a2fd8-148">Export-Clixml</span></span>](Export-Clixml.md)
<span data-ttu-id="a2fd8-149">Crée une représentation XML d'un ou plusieurs objets et la stocke dans un fichier.</span><span class="sxs-lookup"><span data-stu-id="a2fd8-149">Creates an XML-based representation of an object or objects and stores it in a file.</span></span>

### [<span data-ttu-id="a2fd8-150">Export-Csv</span><span class="sxs-lookup"><span data-stu-id="a2fd8-150">Export-Csv</span></span>](Export-Csv.md)
<span data-ttu-id="a2fd8-151">Convertit des objets en une série de chaînes de valeurs séparées par des virgules (CSV) et enregistre les chaînes dans un fichier.</span><span class="sxs-lookup"><span data-stu-id="a2fd8-151">Converts objects into a series of comma-separated value (CSV) strings and saves the strings to a file.</span></span>

### [<span data-ttu-id="a2fd8-152">Export-FormatData</span><span class="sxs-lookup"><span data-stu-id="a2fd8-152">Export-FormatData</span></span>](Export-FormatData.md)
<span data-ttu-id="a2fd8-153">Enregistre les données de mise en forme de la session active dans un fichier de mise en forme.</span><span class="sxs-lookup"><span data-stu-id="a2fd8-153">Saves formatting data from the current session in a formatting file.</span></span>

### [<span data-ttu-id="a2fd8-154">Export-PSSession</span><span class="sxs-lookup"><span data-stu-id="a2fd8-154">Export-PSSession</span></span>](Export-PSSession.md)
<span data-ttu-id="a2fd8-155">Exporte les commandes d’une autre session et les enregistre dans un module PowerShell.</span><span class="sxs-lookup"><span data-stu-id="a2fd8-155">Exports commands from another session and saves them in a PowerShell module.</span></span>

### [<span data-ttu-id="a2fd8-156">Format-Custom</span><span class="sxs-lookup"><span data-stu-id="a2fd8-156">Format-Custom</span></span>](Format-Custom.md)
<span data-ttu-id="a2fd8-157">Utilise un affichage personnalisé pour mettre en forme la sortie.</span><span class="sxs-lookup"><span data-stu-id="a2fd8-157">Uses a customized view to format the output.</span></span>

### [<span data-ttu-id="a2fd8-158">Format-Hex</span><span class="sxs-lookup"><span data-stu-id="a2fd8-158">Format-Hex</span></span>](Format-Hex.md)
<span data-ttu-id="a2fd8-159">Affiche un fichier ou une autre entrée au format hexadécimal.</span><span class="sxs-lookup"><span data-stu-id="a2fd8-159">Displays a file or other input as hexadecimal.</span></span>

### [<span data-ttu-id="a2fd8-160">Format-List</span><span class="sxs-lookup"><span data-stu-id="a2fd8-160">Format-List</span></span>](Format-List.md)
<span data-ttu-id="a2fd8-161">Organise la sortie sous la forme d'une liste de propriétés dont chaque élément apparaît sur sa propre ligne.</span><span class="sxs-lookup"><span data-stu-id="a2fd8-161">Formats the output as a list of properties in which each property appears on a new line.</span></span>

### [<span data-ttu-id="a2fd8-162">Format-Table</span><span class="sxs-lookup"><span data-stu-id="a2fd8-162">Format-Table</span></span>](Format-Table.md)
<span data-ttu-id="a2fd8-163">Met en forme la sortie en tant que table.</span><span class="sxs-lookup"><span data-stu-id="a2fd8-163">Formats the output as a table.</span></span>

### [<span data-ttu-id="a2fd8-164">Format-Wide</span><span class="sxs-lookup"><span data-stu-id="a2fd8-164">Format-Wide</span></span>](Format-Wide.md)
<span data-ttu-id="a2fd8-165">Met en forme des objets en tant que tableau large affichant une seule propriété de chaque objet.</span><span class="sxs-lookup"><span data-stu-id="a2fd8-165">Formats objects as a wide table that displays only one property of each object.</span></span>

### [<span data-ttu-id="a2fd8-166">Get-Alias</span><span class="sxs-lookup"><span data-stu-id="a2fd8-166">Get-Alias</span></span>](Get-Alias.md)
<span data-ttu-id="a2fd8-167">Obtient l'alias pour la session active.</span><span class="sxs-lookup"><span data-stu-id="a2fd8-167">Gets the aliases for the current session.</span></span>

### [<span data-ttu-id="a2fd8-168">Get-Culture</span><span class="sxs-lookup"><span data-stu-id="a2fd8-168">Get-Culture</span></span>](Get-Culture.md)
<span data-ttu-id="a2fd8-169">Obtient la culture actuelle définie dans le système d'exploitation.</span><span class="sxs-lookup"><span data-stu-id="a2fd8-169">Gets the current culture set in the operating system.</span></span>

### [<span data-ttu-id="a2fd8-170">Obtient la date</span><span class="sxs-lookup"><span data-stu-id="a2fd8-170">Get-Date</span></span>](Get-Date.md)
<span data-ttu-id="a2fd8-171">Obtient les date et heure actuelles.</span><span class="sxs-lookup"><span data-stu-id="a2fd8-171">Gets the current date and time.</span></span>

### [<span data-ttu-id="a2fd8-172">Get-Event</span><span class="sxs-lookup"><span data-stu-id="a2fd8-172">Get-Event</span></span>](Get-Event.md)
<span data-ttu-id="a2fd8-173">Obtient les événements présents dans la file d'attente des événements.</span><span class="sxs-lookup"><span data-stu-id="a2fd8-173">Gets the events in the event queue.</span></span>

### [<span data-ttu-id="a2fd8-174">Get-EventSubscriber</span><span class="sxs-lookup"><span data-stu-id="a2fd8-174">Get-EventSubscriber</span></span>](Get-EventSubscriber.md)
<span data-ttu-id="a2fd8-175">Obtient les abonnés aux événements dans la session active.</span><span class="sxs-lookup"><span data-stu-id="a2fd8-175">Gets the event subscribers in the current session.</span></span>

### [<span data-ttu-id="a2fd8-176">Get-FileHash</span><span class="sxs-lookup"><span data-stu-id="a2fd8-176">Get-FileHash</span></span>](Get-FileHash.md)
<span data-ttu-id="a2fd8-177">Calcule la valeur de hachage pour un fichier en utilisant un algorithme de hachage spécifié.</span><span class="sxs-lookup"><span data-stu-id="a2fd8-177">Computes the hash value for a file by using a specified hash algorithm.</span></span>

### [<span data-ttu-id="a2fd8-178">Get-FormatData</span><span class="sxs-lookup"><span data-stu-id="a2fd8-178">Get-FormatData</span></span>](Get-FormatData.md)
<span data-ttu-id="a2fd8-179">Obtient les données de mise en forme de la session active.</span><span class="sxs-lookup"><span data-stu-id="a2fd8-179">Gets the formatting data in the current session.</span></span>

### [<span data-ttu-id="a2fd8-180">Get-Host</span><span class="sxs-lookup"><span data-stu-id="a2fd8-180">Get-Host</span></span>](Get-Host.md)
<span data-ttu-id="a2fd8-181">Obtient un objet qui représente le programme hôte actuel.</span><span class="sxs-lookup"><span data-stu-id="a2fd8-181">Gets an object that represents the current host program.</span></span>

### [<span data-ttu-id="a2fd8-182">Get-Member</span><span class="sxs-lookup"><span data-stu-id="a2fd8-182">Get-Member</span></span>](Get-Member.md)
<span data-ttu-id="a2fd8-183">Obtient les propriétés et méthodes des objets.</span><span class="sxs-lookup"><span data-stu-id="a2fd8-183">Gets the properties and methods of objects.</span></span>

### [<span data-ttu-id="a2fd8-184">Get-PSBreakpoint</span><span class="sxs-lookup"><span data-stu-id="a2fd8-184">Get-PSBreakpoint</span></span>](Get-PSBreakpoint.md)
<span data-ttu-id="a2fd8-185">Obtient les points d'arrêt définis dans la session active.</span><span class="sxs-lookup"><span data-stu-id="a2fd8-185">Gets the breakpoints that are set in the current session.</span></span>

### [<span data-ttu-id="a2fd8-186">Get-PSCallStack</span><span class="sxs-lookup"><span data-stu-id="a2fd8-186">Get-PSCallStack</span></span>](Get-PSCallStack.md)
<span data-ttu-id="a2fd8-187">Affiche la pile des appels actuelle.</span><span class="sxs-lookup"><span data-stu-id="a2fd8-187">Displays the current call stack.</span></span>

### [<span data-ttu-id="a2fd8-188">Get-Random</span><span class="sxs-lookup"><span data-stu-id="a2fd8-188">Get-Random</span></span>](Get-Random.md)
<span data-ttu-id="a2fd8-189">Obtient un nombre aléatoire ou sélectionne de façon aléatoire des objets d'une collection.</span><span class="sxs-lookup"><span data-stu-id="a2fd8-189">Gets a random number, or selects objects randomly from a collection.</span></span>

### [<span data-ttu-id="a2fd8-190">Get-Runspace</span><span class="sxs-lookup"><span data-stu-id="a2fd8-190">Get-Runspace</span></span>](Get-Runspace.md)
<span data-ttu-id="a2fd8-191">Obtient les instances d’exécution actifs dans un processus hôte PowerShell.</span><span class="sxs-lookup"><span data-stu-id="a2fd8-191">Gets active runspaces within a PowerShell host process.</span></span>

### [<span data-ttu-id="a2fd8-192">Get-RunspaceDebug</span><span class="sxs-lookup"><span data-stu-id="a2fd8-192">Get-RunspaceDebug</span></span>](Get-RunspaceDebug.md)
<span data-ttu-id="a2fd8-193">Affiche les options de débogage d’instance d’exécution.</span><span class="sxs-lookup"><span data-stu-id="a2fd8-193">Shows runspace debugging options.</span></span>

### [<span data-ttu-id="a2fd8-194">Get-TraceSource</span><span class="sxs-lookup"><span data-stu-id="a2fd8-194">Get-TraceSource</span></span>](Get-TraceSource.md)
<span data-ttu-id="a2fd8-195">Obtient les composants PowerShell instrumentés pour le suivi.</span><span class="sxs-lookup"><span data-stu-id="a2fd8-195">Gets PowerShell components that are instrumented for tracing.</span></span>

### [<span data-ttu-id="a2fd8-196">Get-TypeData</span><span class="sxs-lookup"><span data-stu-id="a2fd8-196">Get-TypeData</span></span>](Get-TypeData.md)
<span data-ttu-id="a2fd8-197">Obtient les données de type étendu dans la session active.</span><span class="sxs-lookup"><span data-stu-id="a2fd8-197">Gets the extended type data in the current session.</span></span>

### [<span data-ttu-id="a2fd8-198">Get-UICulture</span><span class="sxs-lookup"><span data-stu-id="a2fd8-198">Get-UICulture</span></span>](Get-UICulture.md)
<span data-ttu-id="a2fd8-199">Obtient les paramètres de culture d’interface utilisateur actuels dans le système d’exploitation.</span><span class="sxs-lookup"><span data-stu-id="a2fd8-199">Gets the current UI culture settings in the operating system.</span></span>

### [<span data-ttu-id="a2fd8-200">Get-Unique</span><span class="sxs-lookup"><span data-stu-id="a2fd8-200">Get-Unique</span></span>](Get-Unique.md)
<span data-ttu-id="a2fd8-201">Retourne les éléments uniques d'une liste triée.</span><span class="sxs-lookup"><span data-stu-id="a2fd8-201">Returns unique items from a sorted list.</span></span>

### [<span data-ttu-id="a2fd8-202">Get-Variable</span><span class="sxs-lookup"><span data-stu-id="a2fd8-202">Get-Variable</span></span>](Get-Variable.md)
<span data-ttu-id="a2fd8-203">Obtient les variables dans la console active.</span><span class="sxs-lookup"><span data-stu-id="a2fd8-203">Gets the variables in the current console.</span></span>

### [<span data-ttu-id="a2fd8-204">Get-Verb</span><span class="sxs-lookup"><span data-stu-id="a2fd8-204">Get-Verb</span></span>](Get-Verb.md)
<span data-ttu-id="a2fd8-205">Obtient les verbes PowerShell approuvés.</span><span class="sxs-lookup"><span data-stu-id="a2fd8-205">Gets approved PowerShell verbs.</span></span>

### [<span data-ttu-id="a2fd8-206">Group-Object</span><span class="sxs-lookup"><span data-stu-id="a2fd8-206">Group-Object</span></span>](Group-Object.md)
<span data-ttu-id="a2fd8-207">Groupe les objets qui contiennent la même valeur pour les propriétés spécifiées.</span><span class="sxs-lookup"><span data-stu-id="a2fd8-207">Groups objects that contain the same value for specified properties.</span></span>

### [<span data-ttu-id="a2fd8-208">Import-Alias</span><span class="sxs-lookup"><span data-stu-id="a2fd8-208">Import-Alias</span></span>](Import-Alias.md)
<span data-ttu-id="a2fd8-209">Importe une liste d'alias à partir d'un fichier.</span><span class="sxs-lookup"><span data-stu-id="a2fd8-209">Imports an alias list from a file.</span></span>

### [<span data-ttu-id="a2fd8-210">Import-Clixml</span><span class="sxs-lookup"><span data-stu-id="a2fd8-210">Import-Clixml</span></span>](Import-Clixml.md)
<span data-ttu-id="a2fd8-211">Importe un fichier CLIXML et crée des objets correspondants dans PowerShell.</span><span class="sxs-lookup"><span data-stu-id="a2fd8-211">Imports a CLIXML file and creates corresponding objects in PowerShell.</span></span>

### [<span data-ttu-id="a2fd8-212">Import-Csv</span><span class="sxs-lookup"><span data-stu-id="a2fd8-212">Import-Csv</span></span>](Import-Csv.md)
<span data-ttu-id="a2fd8-213">Crée des objets personnalisés de type tableau à partir des éléments dans un fichier de valeurs séparées par des virgules (CSV).</span><span class="sxs-lookup"><span data-stu-id="a2fd8-213">Creates table-like custom objects from the items in a comma-separated value (CSV) file.</span></span>

### [<span data-ttu-id="a2fd8-214">Import-LocalizedData</span><span class="sxs-lookup"><span data-stu-id="a2fd8-214">Import-LocalizedData</span></span>](Import-LocalizedData.md)
<span data-ttu-id="a2fd8-215">Importe les données propres au langage dans les scripts et les fonctions basés sur la culture d'interface utilisateur sélectionnée pour le système d'exploitation.</span><span class="sxs-lookup"><span data-stu-id="a2fd8-215">Imports language-specific data into scripts and functions based on the UI culture that is selected for the operating system.</span></span>

### [<span data-ttu-id="a2fd8-216">Import-PowerShellDataFile</span><span class="sxs-lookup"><span data-stu-id="a2fd8-216">Import-PowerShellDataFile</span></span>](Import-PowerShellDataFile.md)
<span data-ttu-id="a2fd8-217">Importe des valeurs à partir d’un. Fichier PSD1 sans appeler son contenu</span><span class="sxs-lookup"><span data-stu-id="a2fd8-217">Imports values from a .PSD1 file without invoking its contents</span></span>

### [<span data-ttu-id="a2fd8-218">Import-PSSession</span><span class="sxs-lookup"><span data-stu-id="a2fd8-218">Import-PSSession</span></span>](Import-PSSession.md)
<span data-ttu-id="a2fd8-219">Importe des commandes à partir d'une autre session dans la session active.</span><span class="sxs-lookup"><span data-stu-id="a2fd8-219">Imports commands from another session into the current session.</span></span>

### [<span data-ttu-id="a2fd8-220">Invoke-Expression</span><span class="sxs-lookup"><span data-stu-id="a2fd8-220">Invoke-Expression</span></span>](Invoke-Expression.md)
<span data-ttu-id="a2fd8-221">Exécute des commandes ou des expressions sur l'ordinateur local.</span><span class="sxs-lookup"><span data-stu-id="a2fd8-221">Runs commands or expressions on the local computer.</span></span>

### [<span data-ttu-id="a2fd8-222">Invoke-RestMethod</span><span class="sxs-lookup"><span data-stu-id="a2fd8-222">Invoke-RestMethod</span></span>](Invoke-RestMethod.md)
<span data-ttu-id="a2fd8-223">Envoie une demande HTTP ou HTTPS à un service web RESTful.</span><span class="sxs-lookup"><span data-stu-id="a2fd8-223">Sends an HTTP or HTTPS request to a RESTful web service.</span></span>

### [<span data-ttu-id="a2fd8-224">Invoke-WebRequest</span><span class="sxs-lookup"><span data-stu-id="a2fd8-224">Invoke-WebRequest</span></span>](Invoke-WebRequest.md)
<span data-ttu-id="a2fd8-225">Obtient le contenu d'une page web sur Internet.</span><span class="sxs-lookup"><span data-stu-id="a2fd8-225">Gets content from a web page on the Internet.</span></span>

### [<span data-ttu-id="a2fd8-226">Measure-Command</span><span class="sxs-lookup"><span data-stu-id="a2fd8-226">Measure-Command</span></span>](Measure-Command.md)
<span data-ttu-id="a2fd8-227">Mesure le temps nécessaire pour exécuter des applets de commande et des blocs de script.</span><span class="sxs-lookup"><span data-stu-id="a2fd8-227">Measures the time it takes to run script blocks and cmdlets.</span></span>

### [<span data-ttu-id="a2fd8-228">Measure-Object</span><span class="sxs-lookup"><span data-stu-id="a2fd8-228">Measure-Object</span></span>](Measure-Object.md)
<span data-ttu-id="a2fd8-229">Calcule les propriétés numériques des objets et les caractères, les mots et les lignes dans les objets de chaîne, par exemple les fichiers de texte.</span><span class="sxs-lookup"><span data-stu-id="a2fd8-229">Calculates the numeric properties of objects, and the characters, words, and lines in string objects, such as files of text.</span></span>

### [<span data-ttu-id="a2fd8-230">New-Alias</span><span class="sxs-lookup"><span data-stu-id="a2fd8-230">New-Alias</span></span>](New-Alias.md)
<span data-ttu-id="a2fd8-231">Crée un alias.</span><span class="sxs-lookup"><span data-stu-id="a2fd8-231">Creates a new alias.</span></span>

### [<span data-ttu-id="a2fd8-232">New-Event</span><span class="sxs-lookup"><span data-stu-id="a2fd8-232">New-Event</span></span>](New-Event.md)
<span data-ttu-id="a2fd8-233">Crée un événement.</span><span class="sxs-lookup"><span data-stu-id="a2fd8-233">Creates a new event.</span></span>

### [<span data-ttu-id="a2fd8-234">New-GUID</span><span class="sxs-lookup"><span data-stu-id="a2fd8-234">New-Guid</span></span>](New-Guid.md)
<span data-ttu-id="a2fd8-235">Crée un GUID.</span><span class="sxs-lookup"><span data-stu-id="a2fd8-235">Creates a GUID.</span></span>

### [<span data-ttu-id="a2fd8-236">New-Object</span><span class="sxs-lookup"><span data-stu-id="a2fd8-236">New-Object</span></span>](New-Object.md)
<span data-ttu-id="a2fd8-237">Crée une instance d'un objet Microsoft .NET Framework ou COM.</span><span class="sxs-lookup"><span data-stu-id="a2fd8-237">Creates an instance of a Microsoft .NET Framework or COM object.</span></span>

### [<span data-ttu-id="a2fd8-238">New-TemporaryFile</span><span class="sxs-lookup"><span data-stu-id="a2fd8-238">New-TemporaryFile</span></span>](New-TemporaryFile.md)
<span data-ttu-id="a2fd8-239">Crée un fichier temporaire.</span><span class="sxs-lookup"><span data-stu-id="a2fd8-239">Creates a temporary file.</span></span>

### [<span data-ttu-id="a2fd8-240">New-TimeSpan</span><span class="sxs-lookup"><span data-stu-id="a2fd8-240">New-TimeSpan</span></span>](New-TimeSpan.md)
<span data-ttu-id="a2fd8-241">Crée un objet TimeSpan.</span><span class="sxs-lookup"><span data-stu-id="a2fd8-241">Creates a TimeSpan object.</span></span>

### [<span data-ttu-id="a2fd8-242">New-Variable</span><span class="sxs-lookup"><span data-stu-id="a2fd8-242">New-Variable</span></span>](New-Variable.md)
<span data-ttu-id="a2fd8-243">Crée une variable.</span><span class="sxs-lookup"><span data-stu-id="a2fd8-243">Creates a new variable.</span></span>

### [<span data-ttu-id="a2fd8-244">Out-File</span><span class="sxs-lookup"><span data-stu-id="a2fd8-244">Out-File</span></span>](Out-File.md)
<span data-ttu-id="a2fd8-245">Envoie la sortie vers un fichier.</span><span class="sxs-lookup"><span data-stu-id="a2fd8-245">Sends output to a file.</span></span>

### [<span data-ttu-id="a2fd8-246">Out-GridView</span><span class="sxs-lookup"><span data-stu-id="a2fd8-246">Out-GridView</span></span>](Out-GridView.md)
<span data-ttu-id="a2fd8-247">Envoie la sortie vers un tableau interactif dans une fenêtre distincte.</span><span class="sxs-lookup"><span data-stu-id="a2fd8-247">Sends output to an interactive table in a separate window.</span></span>

### [<span data-ttu-id="a2fd8-248">Out-Printer</span><span class="sxs-lookup"><span data-stu-id="a2fd8-248">Out-Printer</span></span>](Out-Printer.md)
<span data-ttu-id="a2fd8-249">Envoie la sortie vers une imprimante.</span><span class="sxs-lookup"><span data-stu-id="a2fd8-249">Sends output to a printer.</span></span>

### [<span data-ttu-id="a2fd8-250">Out-String</span><span class="sxs-lookup"><span data-stu-id="a2fd8-250">Out-String</span></span>](Out-String.md)
<span data-ttu-id="a2fd8-251">Génère des objets d’entrée sous forme de chaînes.</span><span class="sxs-lookup"><span data-stu-id="a2fd8-251">Outputs input objects as a strings.</span></span>

### [<span data-ttu-id="a2fd8-252">Read-Host</span><span class="sxs-lookup"><span data-stu-id="a2fd8-252">Read-Host</span></span>](Read-Host.md)
<span data-ttu-id="a2fd8-253">Lit une ligne d'entrée de la console.</span><span class="sxs-lookup"><span data-stu-id="a2fd8-253">Reads a line of input from the console.</span></span>

### [<span data-ttu-id="a2fd8-254">Register-EngineEvent</span><span class="sxs-lookup"><span data-stu-id="a2fd8-254">Register-EngineEvent</span></span>](Register-EngineEvent.md)
<span data-ttu-id="a2fd8-255">S’abonne aux événements qui sont générés par le moteur PowerShell et par l’applet de commande `New-Event` .</span><span class="sxs-lookup"><span data-stu-id="a2fd8-255">Subscribes to events that are generated by the PowerShell engine and by the `New-Event` cmdlet.</span></span>

### [<span data-ttu-id="a2fd8-256">Register-ObjectEvent</span><span class="sxs-lookup"><span data-stu-id="a2fd8-256">Register-ObjectEvent</span></span>](Register-ObjectEvent.md)
<span data-ttu-id="a2fd8-257">S'abonne aux événements générés par un objet Microsoft .NET Framework.</span><span class="sxs-lookup"><span data-stu-id="a2fd8-257">Subscribes to the events that are generated by a Microsoft .NET Framework object.</span></span>

### [<span data-ttu-id="a2fd8-258">Remove-Event</span><span class="sxs-lookup"><span data-stu-id="a2fd8-258">Remove-Event</span></span>](Remove-Event.md)
<span data-ttu-id="a2fd8-259">Supprime les événements de la file d'attente des événements.</span><span class="sxs-lookup"><span data-stu-id="a2fd8-259">Deletes events from the event queue.</span></span>

### [<span data-ttu-id="a2fd8-260">Remove-PSBreakpoint</span><span class="sxs-lookup"><span data-stu-id="a2fd8-260">Remove-PSBreakpoint</span></span>](Remove-PSBreakpoint.md)
<span data-ttu-id="a2fd8-261">Supprime les points d'arrêt de la console active.</span><span class="sxs-lookup"><span data-stu-id="a2fd8-261">Deletes breakpoints from the current console.</span></span>

### [<span data-ttu-id="a2fd8-262">Remove-TypeData</span><span class="sxs-lookup"><span data-stu-id="a2fd8-262">Remove-TypeData</span></span>](Remove-TypeData.md)
<span data-ttu-id="a2fd8-263">Supprime les types étendus de la session active.</span><span class="sxs-lookup"><span data-stu-id="a2fd8-263">Deletes extended types from the current session.</span></span>

### [<span data-ttu-id="a2fd8-264">Remove-Variable</span><span class="sxs-lookup"><span data-stu-id="a2fd8-264">Remove-Variable</span></span>](Remove-Variable.md)
<span data-ttu-id="a2fd8-265">Supprime une variable et sa valeur.</span><span class="sxs-lookup"><span data-stu-id="a2fd8-265">Deletes a variable and its value.</span></span>

### [<span data-ttu-id="a2fd8-266">Select-Object</span><span class="sxs-lookup"><span data-stu-id="a2fd8-266">Select-Object</span></span>](Select-Object.md)
<span data-ttu-id="a2fd8-267">Sélectionne des objets ou des propriétés d'objet.</span><span class="sxs-lookup"><span data-stu-id="a2fd8-267">Selects objects or object properties.</span></span>

### [<span data-ttu-id="a2fd8-268">Select-String</span><span class="sxs-lookup"><span data-stu-id="a2fd8-268">Select-String</span></span>](Select-String.md)
<span data-ttu-id="a2fd8-269">Recherche du texte dans des chaînes et des fichiers.</span><span class="sxs-lookup"><span data-stu-id="a2fd8-269">Finds text in strings and files.</span></span>

### [<span data-ttu-id="a2fd8-270">Select-Xml</span><span class="sxs-lookup"><span data-stu-id="a2fd8-270">Select-Xml</span></span>](Select-Xml.md)
<span data-ttu-id="a2fd8-271">Recherche du texte dans un document ou une chaîne XML.</span><span class="sxs-lookup"><span data-stu-id="a2fd8-271">Finds text in an XML string or document.</span></span>

### [<span data-ttu-id="a2fd8-272">Send-MailMessage</span><span class="sxs-lookup"><span data-stu-id="a2fd8-272">Send-MailMessage</span></span>](Send-MailMessage.md)
<span data-ttu-id="a2fd8-273">Envoie un e-mail.</span><span class="sxs-lookup"><span data-stu-id="a2fd8-273">Sends an email message.</span></span>

### [<span data-ttu-id="a2fd8-274">Set-Alias</span><span class="sxs-lookup"><span data-stu-id="a2fd8-274">Set-Alias</span></span>](Set-Alias.md)
<span data-ttu-id="a2fd8-275">Crée ou modifie un alias pour une applet de commande ou une autre commande dans la session PowerShell active.</span><span class="sxs-lookup"><span data-stu-id="a2fd8-275">Creates or changes an alias for a cmdlet or other command in the current PowerShell session.</span></span>

### [<span data-ttu-id="a2fd8-276">Set-Date</span><span class="sxs-lookup"><span data-stu-id="a2fd8-276">Set-Date</span></span>](Set-Date.md)
<span data-ttu-id="a2fd8-277">Définit l'heure système sur l'ordinateur sur une heure que vous spécifiez.</span><span class="sxs-lookup"><span data-stu-id="a2fd8-277">Changes the system time on the computer to a time that you specify.</span></span>

### [<span data-ttu-id="a2fd8-278">Set-PSBreakpoint</span><span class="sxs-lookup"><span data-stu-id="a2fd8-278">Set-PSBreakpoint</span></span>](Set-PSBreakpoint.md)
<span data-ttu-id="a2fd8-279">Définit un point d'arrêt sur une ligne, une commande ou une variable.</span><span class="sxs-lookup"><span data-stu-id="a2fd8-279">Sets a breakpoint on a line, command, or variable.</span></span>

### [<span data-ttu-id="a2fd8-280">Set-TraceSource</span><span class="sxs-lookup"><span data-stu-id="a2fd8-280">Set-TraceSource</span></span>](Set-TraceSource.md)
<span data-ttu-id="a2fd8-281">Configure, démarre et arrête un suivi des composants PowerShell.</span><span class="sxs-lookup"><span data-stu-id="a2fd8-281">Configures, starts, and stops a trace of PowerShell components.</span></span>

### [<span data-ttu-id="a2fd8-282">Set-Variable</span><span class="sxs-lookup"><span data-stu-id="a2fd8-282">Set-Variable</span></span>](Set-Variable.md)
<span data-ttu-id="a2fd8-283">Définit la valeur d'une variable.</span><span class="sxs-lookup"><span data-stu-id="a2fd8-283">Sets the value of a variable.</span></span>

### [<span data-ttu-id="a2fd8-284">Show-Command</span><span class="sxs-lookup"><span data-stu-id="a2fd8-284">Show-Command</span></span>](Show-Command.md)
<span data-ttu-id="a2fd8-285">Affiche des informations de commande PowerShell dans une fenêtre graphique.</span><span class="sxs-lookup"><span data-stu-id="a2fd8-285">Displays PowerShell command information in a graphical window.</span></span>

### [<span data-ttu-id="a2fd8-286">Sort-Object</span><span class="sxs-lookup"><span data-stu-id="a2fd8-286">Sort-Object</span></span>](Sort-Object.md)
<span data-ttu-id="a2fd8-287">Trie les objets selon les valeurs de propriété.</span><span class="sxs-lookup"><span data-stu-id="a2fd8-287">Sorts objects by property values.</span></span>

### [<span data-ttu-id="a2fd8-288">Start-Sleep</span><span class="sxs-lookup"><span data-stu-id="a2fd8-288">Start-Sleep</span></span>](Start-Sleep.md)
<span data-ttu-id="a2fd8-289">Interrompt l'activité dans un script ou une session pour la période spécifiée.</span><span class="sxs-lookup"><span data-stu-id="a2fd8-289">Suspends the activity in a script or session for the specified period of time.</span></span>

### [<span data-ttu-id="a2fd8-290">Tee-Object</span><span class="sxs-lookup"><span data-stu-id="a2fd8-290">Tee-Object</span></span>](Tee-Object.md)
<span data-ttu-id="a2fd8-291">Enregistre la sortie de la commande dans un fichier ou dans une variable, puis l'envoie dans le pipeline.</span><span class="sxs-lookup"><span data-stu-id="a2fd8-291">Saves command output in a file or variable and also sends it down the pipeline.</span></span>

### [<span data-ttu-id="a2fd8-292">Trace-Command</span><span class="sxs-lookup"><span data-stu-id="a2fd8-292">Trace-Command</span></span>](Trace-Command.md)
<span data-ttu-id="a2fd8-293">Configure et démarre un suivi de la commande ou de l'expression spécifiée.</span><span class="sxs-lookup"><span data-stu-id="a2fd8-293">Configures and starts a trace of the specified expression or command.</span></span>

### [<span data-ttu-id="a2fd8-294">Unblock-File</span><span class="sxs-lookup"><span data-stu-id="a2fd8-294">Unblock-File</span></span>](Unblock-File.md)
<span data-ttu-id="a2fd8-295">Débloque les fichiers téléchargés depuis Internet.</span><span class="sxs-lookup"><span data-stu-id="a2fd8-295">Unblocks files that were downloaded from the Internet.</span></span>

### [<span data-ttu-id="a2fd8-296">Unregister-Event</span><span class="sxs-lookup"><span data-stu-id="a2fd8-296">Unregister-Event</span></span>](Unregister-Event.md)
<span data-ttu-id="a2fd8-297">Annule un abonnement aux événements.</span><span class="sxs-lookup"><span data-stu-id="a2fd8-297">Cancels an event subscription.</span></span>

### [<span data-ttu-id="a2fd8-298">Update-FormatData</span><span class="sxs-lookup"><span data-stu-id="a2fd8-298">Update-FormatData</span></span>](Update-FormatData.md)
<span data-ttu-id="a2fd8-299">Met à jour les données de mise en forme dans la session active.</span><span class="sxs-lookup"><span data-stu-id="a2fd8-299">Updates the formatting data in the current session.</span></span>

### [<span data-ttu-id="a2fd8-300">Update-List</span><span class="sxs-lookup"><span data-stu-id="a2fd8-300">Update-List</span></span>](Update-List.md)
<span data-ttu-id="a2fd8-301">Ajoute et supprime des éléments dans une valeur de propriété qui contient une collection d'objets.</span><span class="sxs-lookup"><span data-stu-id="a2fd8-301">Adds items to and removes items from a property value that contains a collection of objects.</span></span>

### [<span data-ttu-id="a2fd8-302">Update-TypeData</span><span class="sxs-lookup"><span data-stu-id="a2fd8-302">Update-TypeData</span></span>](Update-TypeData.md)
<span data-ttu-id="a2fd8-303">Met à jour les données de type étendu dans la session.</span><span class="sxs-lookup"><span data-stu-id="a2fd8-303">Updates the extended type data in the session.</span></span>

### [<span data-ttu-id="a2fd8-304">Wait-Debugger</span><span class="sxs-lookup"><span data-stu-id="a2fd8-304">Wait-Debugger</span></span>](Wait-Debugger.md)
<span data-ttu-id="a2fd8-305">Arrête un script dans le débogueur avant d’exécuter l’instruction suivante dans le script.</span><span class="sxs-lookup"><span data-stu-id="a2fd8-305">Stops a script in the debugger before running the next statement in the script.</span></span>

### [<span data-ttu-id="a2fd8-306">Wait-Event</span><span class="sxs-lookup"><span data-stu-id="a2fd8-306">Wait-Event</span></span>](Wait-Event.md)
<span data-ttu-id="a2fd8-307">Attend qu'un événement particulier soit déclenché avant de poursuivre son exécution.</span><span class="sxs-lookup"><span data-stu-id="a2fd8-307">Waits until a particular event is raised before continuing to run.</span></span>

### [<span data-ttu-id="a2fd8-308">Write-Debug</span><span class="sxs-lookup"><span data-stu-id="a2fd8-308">Write-Debug</span></span>](Write-Debug.md)
<span data-ttu-id="a2fd8-309">Écrit un message de débogage dans la console.</span><span class="sxs-lookup"><span data-stu-id="a2fd8-309">Writes a debug message to the console.</span></span>

### [<span data-ttu-id="a2fd8-310">Écriture-erreur</span><span class="sxs-lookup"><span data-stu-id="a2fd8-310">Write-Error</span></span>](Write-Error.md)
<span data-ttu-id="a2fd8-311">Écrit un objet dans le flux d'erreurs.</span><span class="sxs-lookup"><span data-stu-id="a2fd8-311">Writes an object to the error stream.</span></span>

### [<span data-ttu-id="a2fd8-312">Write-Host</span><span class="sxs-lookup"><span data-stu-id="a2fd8-312">Write-Host</span></span>](Write-Host.md)
<span data-ttu-id="a2fd8-313">Écrit la sortie personnalisée sur un hôte.</span><span class="sxs-lookup"><span data-stu-id="a2fd8-313">Writes customized output to a host.</span></span>

### [<span data-ttu-id="a2fd8-314">Write-Information</span><span class="sxs-lookup"><span data-stu-id="a2fd8-314">Write-Information</span></span>](Write-Information.md)
<span data-ttu-id="a2fd8-315">Spécifie la manière dont PowerShell gère les données de flux d’informations pour une commande.</span><span class="sxs-lookup"><span data-stu-id="a2fd8-315">Specifies how PowerShell handles information stream data for a command.</span></span>

### [<span data-ttu-id="a2fd8-316">Write-Output</span><span class="sxs-lookup"><span data-stu-id="a2fd8-316">Write-Output</span></span>](Write-Output.md)
<span data-ttu-id="a2fd8-317">Envoie les objets spécifiés à la commande suivante du pipeline.</span><span class="sxs-lookup"><span data-stu-id="a2fd8-317">Sends the specified objects to the next command in the pipeline.</span></span>

### [<span data-ttu-id="a2fd8-318">Write-Progress</span><span class="sxs-lookup"><span data-stu-id="a2fd8-318">Write-Progress</span></span>](Write-Progress.md)
<span data-ttu-id="a2fd8-319">Affiche une barre de progression dans une fenêtre de commande PowerShell.</span><span class="sxs-lookup"><span data-stu-id="a2fd8-319">Displays a progress bar within a PowerShell command window.</span></span>

### [<span data-ttu-id="a2fd8-320">Write-Verbose</span><span class="sxs-lookup"><span data-stu-id="a2fd8-320">Write-Verbose</span></span>](Write-Verbose.md)
<span data-ttu-id="a2fd8-321">Écrit du texte dans le flux de message détaillé.</span><span class="sxs-lookup"><span data-stu-id="a2fd8-321">Writes text to the verbose message stream.</span></span>

### [<span data-ttu-id="a2fd8-322">Write-Warning</span><span class="sxs-lookup"><span data-stu-id="a2fd8-322">Write-Warning</span></span>](Write-Warning.md)
<span data-ttu-id="a2fd8-323">Écrit un message d'avertissement.</span><span class="sxs-lookup"><span data-stu-id="a2fd8-323">Writes a warning message.</span></span>
