reference/7.0/Microsoft.PowerShell.Utility/Microsoft.PowerShell.Utility.md
---
Download Help Link: https://go.microsoft.com/fwlink/?linkid=2113633
Help Version: 7.0.1.0
keywords: powershell,applet de commande
Locale: en-US
Module Guid: 1da87e53-152b-403e-98dc-74d7b4d63d59
Module Name: Microsoft.PowerShell.Utility
ms.date: 06/09/2017
schema: 2.0.0
title: Microsoft.PowerShell.Utility
ms.openlocfilehash: 6afa678e516ca3f3f6af5be87d2bb7eea628fcf5
ms.sourcegitcommit: 9d95532afe81c235c8094eae28ab84b2f77f8c48
ms.translationtype: MT
ms.contentlocale: fr-FR
ms.lasthandoff: 10/07/2020
ms.locfileid: "93206489"
---
# <span data-ttu-id="bc674-103">Module Microsoft.PowerShell.Utility</span><span class="sxs-lookup"><span data-stu-id="bc674-103">Microsoft.PowerShell.Utility Module</span></span>

## <span data-ttu-id="bc674-104">Description</span><span class="sxs-lookup"><span data-stu-id="bc674-104">Description</span></span>

<span data-ttu-id="bc674-105">Cette section contient les rubriques d’aide pour les applets de commande qui sont installées avec le module Microsoft. PowerShell. Utility.</span><span class="sxs-lookup"><span data-stu-id="bc674-105">This section contains the help topics for the cmdlets that are installed with the Microsoft.PowerShell.Utility module.</span></span> <span data-ttu-id="bc674-106">Ce module contient des applets de commande qui gèrent les fonctionnalités de base de PowerShell.</span><span class="sxs-lookup"><span data-stu-id="bc674-106">This module contains cmdlets that manage the basic features of PowerShell.</span></span>

## <span data-ttu-id="bc674-107">Applets de commande Microsoft. PowerShell. Utility</span><span class="sxs-lookup"><span data-stu-id="bc674-107">Microsoft.PowerShell.Utility Cmdlets</span></span>

### [<span data-ttu-id="bc674-108">Add-Member</span><span class="sxs-lookup"><span data-stu-id="bc674-108">Add-Member</span></span>](Add-Member.md)
<span data-ttu-id="bc674-109">Ajoute des propriétés et des méthodes personnalisées à une instance d’un objet PowerShell.</span><span class="sxs-lookup"><span data-stu-id="bc674-109">Adds custom properties and methods to an instance of a PowerShell object.</span></span>

### [<span data-ttu-id="bc674-110">Add-Type</span><span class="sxs-lookup"><span data-stu-id="bc674-110">Add-Type</span></span>](Add-Type.md)
<span data-ttu-id="bc674-111">Ajoute une classe Microsoft .NET Core à une session PowerShell.</span><span class="sxs-lookup"><span data-stu-id="bc674-111">Adds a Microsoft .NET Core class to a PowerShell session.</span></span>

### [<span data-ttu-id="bc674-112">Clear-Variable</span><span class="sxs-lookup"><span data-stu-id="bc674-112">Clear-Variable</span></span>](Clear-Variable.md)
<span data-ttu-id="bc674-113">Supprime la valeur d'une variable.</span><span class="sxs-lookup"><span data-stu-id="bc674-113">Deletes the value of a variable.</span></span>

### [<span data-ttu-id="bc674-114">Compare-Object</span><span class="sxs-lookup"><span data-stu-id="bc674-114">Compare-Object</span></span>](Compare-Object.md)
<span data-ttu-id="bc674-115">Compare deux ensembles d'objets.</span><span class="sxs-lookup"><span data-stu-id="bc674-115">Compares two sets of objects.</span></span>

### [<span data-ttu-id="bc674-116">ConvertFrom-Csv</span><span class="sxs-lookup"><span data-stu-id="bc674-116">ConvertFrom-Csv</span></span>](ConvertFrom-Csv.md)
<span data-ttu-id="bc674-117">Convertit les propriétés d'un objet au format CSV (valeurs séparées par des virgules) en versions CSV des objets d'origine.</span><span class="sxs-lookup"><span data-stu-id="bc674-117">Converts object properties in comma-separated value (CSV) format into CSV versions of the original objects.</span></span>

### [<span data-ttu-id="bc674-118">ConvertFrom-Json</span><span class="sxs-lookup"><span data-stu-id="bc674-118">ConvertFrom-Json</span></span>](ConvertFrom-Json.md)
<span data-ttu-id="bc674-119">Convertit une chaîne au format JSON en un objet personnalisé ou une table de hachage.</span><span class="sxs-lookup"><span data-stu-id="bc674-119">Converts a JSON-formatted string to a custom object or a hash table.</span></span>

### [<span data-ttu-id="bc674-120">ConvertFrom-Markdown</span><span class="sxs-lookup"><span data-stu-id="bc674-120">ConvertFrom-Markdown</span></span>](ConvertFrom-Markdown.md)
<span data-ttu-id="bc674-121">Convertit le contenu d’une chaîne ou d’un fichier en objet **MarkdownInfo** .</span><span class="sxs-lookup"><span data-stu-id="bc674-121">Convert the contents of a string or a file to a **MarkdownInfo** object.</span></span>

### [<span data-ttu-id="bc674-122">ConvertFrom-SddlString</span><span class="sxs-lookup"><span data-stu-id="bc674-122">ConvertFrom-SddlString</span></span>](ConvertFrom-SddlString.md)
<span data-ttu-id="bc674-123">Convertit une chaîne SDDL en objet personnalisé.</span><span class="sxs-lookup"><span data-stu-id="bc674-123">Converts a SDDL string to a custom object.</span></span>

### [<span data-ttu-id="bc674-124">ConvertFrom-StringData</span><span class="sxs-lookup"><span data-stu-id="bc674-124">ConvertFrom-StringData</span></span>](ConvertFrom-StringData.md)
<span data-ttu-id="bc674-125">Convertit une chaîne contenant une ou plusieurs paires clé/valeur en une table de hachage.</span><span class="sxs-lookup"><span data-stu-id="bc674-125">Converts a string containing one or more key and value pairs to a hash table.</span></span>

### [<span data-ttu-id="bc674-126">ConvertTo-Csv</span><span class="sxs-lookup"><span data-stu-id="bc674-126">ConvertTo-Csv</span></span>](ConvertTo-Csv.md)
<span data-ttu-id="bc674-127">Convertit des objets .NET en une série de chaînes de valeurs séparées par des caractères (CSV).</span><span class="sxs-lookup"><span data-stu-id="bc674-127">Converts .NET objects into a series of character-separated value (CSV) strings.</span></span>

### [<span data-ttu-id="bc674-128">ConvertTo-Html</span><span class="sxs-lookup"><span data-stu-id="bc674-128">ConvertTo-Html</span></span>](ConvertTo-Html.md)
<span data-ttu-id="bc674-129">Convertit les objets .NET en code HTML qui peut être affiché dans un navigateur web.</span><span class="sxs-lookup"><span data-stu-id="bc674-129">Converts .NET objects into HTML that can be displayed in a Web browser.</span></span>

### [<span data-ttu-id="bc674-130">ConvertTo-Json</span><span class="sxs-lookup"><span data-stu-id="bc674-130">ConvertTo-Json</span></span>](ConvertTo-Json.md)
<span data-ttu-id="bc674-131">Convertit un objet en une chaîne au format JSON.</span><span class="sxs-lookup"><span data-stu-id="bc674-131">Converts an object to a JSON-formatted string.</span></span>

### [<span data-ttu-id="bc674-132">ConvertTo-Xml</span><span class="sxs-lookup"><span data-stu-id="bc674-132">ConvertTo-Xml</span></span>](ConvertTo-Xml.md)
<span data-ttu-id="bc674-133">Crée une représentation XML d'un objet.</span><span class="sxs-lookup"><span data-stu-id="bc674-133">Creates an XML-based representation of an object.</span></span>

### [<span data-ttu-id="bc674-134">Debug-Runspace</span><span class="sxs-lookup"><span data-stu-id="bc674-134">Debug-Runspace</span></span>](Debug-Runspace.md)
<span data-ttu-id="bc674-135">Démarre une session de débogage interactive avec une instance d’exécution.</span><span class="sxs-lookup"><span data-stu-id="bc674-135">Starts an interactive debugging session with a runspace.</span></span>

### [<span data-ttu-id="bc674-136">Disable-PSBreakpoint</span><span class="sxs-lookup"><span data-stu-id="bc674-136">Disable-PSBreakpoint</span></span>](Disable-PSBreakpoint.md)
<span data-ttu-id="bc674-137">Désactive les points d'arrêt dans la console active.</span><span class="sxs-lookup"><span data-stu-id="bc674-137">Disables the breakpoints in the current console.</span></span>

### [<span data-ttu-id="bc674-138">Disable-RunspaceDebug</span><span class="sxs-lookup"><span data-stu-id="bc674-138">Disable-RunspaceDebug</span></span>](Disable-RunspaceDebug.md)
<span data-ttu-id="bc674-139">Désactive le débogage sur un ou plusieurs instances d’exécution et libère tout arrêt du débogueur en attente.</span><span class="sxs-lookup"><span data-stu-id="bc674-139">Disables debugging on one or more runspaces, and releases any pending debugger stop.</span></span>

### [<span data-ttu-id="bc674-140">Enable-PSBreakpoint</span><span class="sxs-lookup"><span data-stu-id="bc674-140">Enable-PSBreakpoint</span></span>](Enable-PSBreakpoint.md)
<span data-ttu-id="bc674-141">Active les points d'arrêt dans la console active.</span><span class="sxs-lookup"><span data-stu-id="bc674-141">Enables the breakpoints in the current console.</span></span>

### [<span data-ttu-id="bc674-142">Enable-RunspaceDebug</span><span class="sxs-lookup"><span data-stu-id="bc674-142">Enable-RunspaceDebug</span></span>](Enable-RunspaceDebug.md)
<span data-ttu-id="bc674-143">Active le débogage sur instances d’exécution où un point d’arrêt est conservé jusqu’à ce qu’un débogueur soit attaché.</span><span class="sxs-lookup"><span data-stu-id="bc674-143">Enables debugging on runspaces where any breakpoint is preserved until a debugger is attached.</span></span>

### [<span data-ttu-id="bc674-144">Export-Alias</span><span class="sxs-lookup"><span data-stu-id="bc674-144">Export-Alias</span></span>](Export-Alias.md)
<span data-ttu-id="bc674-145">Exporte des informations sur les alias actuellement définis dans un fichier.</span><span class="sxs-lookup"><span data-stu-id="bc674-145">Exports information about currently defined aliases to a file.</span></span>

### [<span data-ttu-id="bc674-146">Export-Clixml</span><span class="sxs-lookup"><span data-stu-id="bc674-146">Export-Clixml</span></span>](Export-Clixml.md)
<span data-ttu-id="bc674-147">Crée une représentation XML d'un ou plusieurs objets et la stocke dans un fichier.</span><span class="sxs-lookup"><span data-stu-id="bc674-147">Creates an XML-based representation of an object or objects and stores it in a file.</span></span>

### [<span data-ttu-id="bc674-148">Export-Csv</span><span class="sxs-lookup"><span data-stu-id="bc674-148">Export-Csv</span></span>](Export-Csv.md)
<span data-ttu-id="bc674-149">Convertit des objets en une série de chaînes de valeurs séparées par des virgules (CSV) et enregistre les chaînes dans un fichier.</span><span class="sxs-lookup"><span data-stu-id="bc674-149">Converts objects into a series of comma-separated value (CSV) strings and saves the strings to a file.</span></span>

### [<span data-ttu-id="bc674-150">Export-FormatData</span><span class="sxs-lookup"><span data-stu-id="bc674-150">Export-FormatData</span></span>](Export-FormatData.md)
<span data-ttu-id="bc674-151">Enregistre les données de mise en forme de la session active dans un fichier de mise en forme.</span><span class="sxs-lookup"><span data-stu-id="bc674-151">Saves formatting data from the current session in a formatting file.</span></span>

### [<span data-ttu-id="bc674-152">Export-PSSession</span><span class="sxs-lookup"><span data-stu-id="bc674-152">Export-PSSession</span></span>](Export-PSSession.md)
<span data-ttu-id="bc674-153">Exporte les commandes d’une autre session et les enregistre dans un module PowerShell.</span><span class="sxs-lookup"><span data-stu-id="bc674-153">Exports commands from another session and saves them in a PowerShell module.</span></span>

### [<span data-ttu-id="bc674-154">Format-Custom</span><span class="sxs-lookup"><span data-stu-id="bc674-154">Format-Custom</span></span>](Format-Custom.md)
<span data-ttu-id="bc674-155">Utilise un affichage personnalisé pour mettre en forme la sortie.</span><span class="sxs-lookup"><span data-stu-id="bc674-155">Uses a customized view to format the output.</span></span>

### [<span data-ttu-id="bc674-156">Format-Hex</span><span class="sxs-lookup"><span data-stu-id="bc674-156">Format-Hex</span></span>](Format-Hex.md)
<span data-ttu-id="bc674-157">Affiche un fichier ou une autre entrée au format hexadécimal.</span><span class="sxs-lookup"><span data-stu-id="bc674-157">Displays a file or other input as hexadecimal.</span></span>

### [<span data-ttu-id="bc674-158">Format-List</span><span class="sxs-lookup"><span data-stu-id="bc674-158">Format-List</span></span>](Format-List.md)
<span data-ttu-id="bc674-159">Organise la sortie sous la forme d'une liste de propriétés dont chaque élément apparaît sur sa propre ligne.</span><span class="sxs-lookup"><span data-stu-id="bc674-159">Formats the output as a list of properties in which each property appears on a new line.</span></span>

### [<span data-ttu-id="bc674-160">Format-Table</span><span class="sxs-lookup"><span data-stu-id="bc674-160">Format-Table</span></span>](Format-Table.md)
<span data-ttu-id="bc674-161">Met en forme la sortie en tant que table.</span><span class="sxs-lookup"><span data-stu-id="bc674-161">Formats the output as a table.</span></span>

### [<span data-ttu-id="bc674-162">Format-Wide</span><span class="sxs-lookup"><span data-stu-id="bc674-162">Format-Wide</span></span>](Format-Wide.md)
<span data-ttu-id="bc674-163">Met en forme des objets en tant que tableau large affichant une seule propriété de chaque objet.</span><span class="sxs-lookup"><span data-stu-id="bc674-163">Formats objects as a wide table that displays only one property of each object.</span></span>

### [<span data-ttu-id="bc674-164">Get-Alias</span><span class="sxs-lookup"><span data-stu-id="bc674-164">Get-Alias</span></span>](Get-Alias.md)
<span data-ttu-id="bc674-165">Obtient l'alias pour la session active.</span><span class="sxs-lookup"><span data-stu-id="bc674-165">Gets the aliases for the current session.</span></span>

### [<span data-ttu-id="bc674-166">Get-Culture</span><span class="sxs-lookup"><span data-stu-id="bc674-166">Get-Culture</span></span>](Get-Culture.md)
<span data-ttu-id="bc674-167">Obtient la culture actuelle définie dans le système d'exploitation.</span><span class="sxs-lookup"><span data-stu-id="bc674-167">Gets the current culture set in the operating system.</span></span>

### [<span data-ttu-id="bc674-168">Obtient la date</span><span class="sxs-lookup"><span data-stu-id="bc674-168">Get-Date</span></span>](Get-Date.md)
<span data-ttu-id="bc674-169">Obtient les date et heure actuelles.</span><span class="sxs-lookup"><span data-stu-id="bc674-169">Gets the current date and time.</span></span>

### [<span data-ttu-id="bc674-170">Get-Error</span><span class="sxs-lookup"><span data-stu-id="bc674-170">Get-Error</span></span>](Get-Error.md)
<span data-ttu-id="bc674-171">Obtient et affiche les messages d’erreur les plus récents de la session active.</span><span class="sxs-lookup"><span data-stu-id="bc674-171">Gets and displays the most recent error messages from the current session.</span></span>

### [<span data-ttu-id="bc674-172">Get-Event</span><span class="sxs-lookup"><span data-stu-id="bc674-172">Get-Event</span></span>](Get-Event.md)
<span data-ttu-id="bc674-173">Obtient les événements présents dans la file d'attente des événements.</span><span class="sxs-lookup"><span data-stu-id="bc674-173">Gets the events in the event queue.</span></span>

### [<span data-ttu-id="bc674-174">Get-EventSubscriber</span><span class="sxs-lookup"><span data-stu-id="bc674-174">Get-EventSubscriber</span></span>](Get-EventSubscriber.md)
<span data-ttu-id="bc674-175">Obtient les abonnés aux événements dans la session active.</span><span class="sxs-lookup"><span data-stu-id="bc674-175">Gets the event subscribers in the current session.</span></span>

### [<span data-ttu-id="bc674-176">Get-FileHash</span><span class="sxs-lookup"><span data-stu-id="bc674-176">Get-FileHash</span></span>](Get-FileHash.md)
<span data-ttu-id="bc674-177">Calcule la valeur de hachage pour un fichier en utilisant un algorithme de hachage spécifié.</span><span class="sxs-lookup"><span data-stu-id="bc674-177">Computes the hash value for a file by using a specified hash algorithm.</span></span>

### [<span data-ttu-id="bc674-178">Get-FormatData</span><span class="sxs-lookup"><span data-stu-id="bc674-178">Get-FormatData</span></span>](Get-FormatData.md)
<span data-ttu-id="bc674-179">Obtient les données de mise en forme de la session active.</span><span class="sxs-lookup"><span data-stu-id="bc674-179">Gets the formatting data in the current session.</span></span>

### [<span data-ttu-id="bc674-180">Get-Host</span><span class="sxs-lookup"><span data-stu-id="bc674-180">Get-Host</span></span>](Get-Host.md)
<span data-ttu-id="bc674-181">Obtient un objet qui représente le programme hôte actuel.</span><span class="sxs-lookup"><span data-stu-id="bc674-181">Gets an object that represents the current host program.</span></span>

### [<span data-ttu-id="bc674-182">Get-MarkdownOption</span><span class="sxs-lookup"><span data-stu-id="bc674-182">Get-MarkdownOption</span></span>](Get-MarkdownOption.md)
<span data-ttu-id="bc674-183">Retourne les couleurs et les styles actuels utilisés pour le rendu du contenu de la démarque dans la console.</span><span class="sxs-lookup"><span data-stu-id="bc674-183">Returns the current colors and styles used for rendering Markdown content in the console.</span></span>

### [<span data-ttu-id="bc674-184">Get-Member</span><span class="sxs-lookup"><span data-stu-id="bc674-184">Get-Member</span></span>](Get-Member.md)
<span data-ttu-id="bc674-185">Obtient les propriétés et méthodes des objets.</span><span class="sxs-lookup"><span data-stu-id="bc674-185">Gets the properties and methods of objects.</span></span>

### [<span data-ttu-id="bc674-186">Get-PSBreakpoint</span><span class="sxs-lookup"><span data-stu-id="bc674-186">Get-PSBreakpoint</span></span>](Get-PSBreakpoint.md)
<span data-ttu-id="bc674-187">Obtient les points d'arrêt définis dans la session active.</span><span class="sxs-lookup"><span data-stu-id="bc674-187">Gets the breakpoints that are set in the current session.</span></span>

### [<span data-ttu-id="bc674-188">Get-PSCallStack</span><span class="sxs-lookup"><span data-stu-id="bc674-188">Get-PSCallStack</span></span>](Get-PSCallStack.md)
<span data-ttu-id="bc674-189">Affiche la pile des appels actuelle.</span><span class="sxs-lookup"><span data-stu-id="bc674-189">Displays the current call stack.</span></span>

### [<span data-ttu-id="bc674-190">Get-Random</span><span class="sxs-lookup"><span data-stu-id="bc674-190">Get-Random</span></span>](Get-Random.md)
<span data-ttu-id="bc674-191">Obtient un nombre aléatoire ou sélectionne de façon aléatoire des objets d'une collection.</span><span class="sxs-lookup"><span data-stu-id="bc674-191">Gets a random number, or selects objects randomly from a collection.</span></span>

### [<span data-ttu-id="bc674-192">Get-Runspace</span><span class="sxs-lookup"><span data-stu-id="bc674-192">Get-Runspace</span></span>](Get-Runspace.md)
<span data-ttu-id="bc674-193">Obtient les instances d’exécution actifs dans un processus hôte PowerShell.</span><span class="sxs-lookup"><span data-stu-id="bc674-193">Gets active runspaces within a PowerShell host process.</span></span>

### [<span data-ttu-id="bc674-194">Get-RunspaceDebug</span><span class="sxs-lookup"><span data-stu-id="bc674-194">Get-RunspaceDebug</span></span>](Get-RunspaceDebug.md)
<span data-ttu-id="bc674-195">Affiche les options de débogage d’instance d’exécution.</span><span class="sxs-lookup"><span data-stu-id="bc674-195">Shows runspace debugging options.</span></span>

### [<span data-ttu-id="bc674-196">Get-TraceSource</span><span class="sxs-lookup"><span data-stu-id="bc674-196">Get-TraceSource</span></span>](Get-TraceSource.md)
<span data-ttu-id="bc674-197">Obtient les composants PowerShell instrumentés pour le suivi.</span><span class="sxs-lookup"><span data-stu-id="bc674-197">Gets PowerShell components that are instrumented for tracing.</span></span>

### [<span data-ttu-id="bc674-198">Get-TypeData</span><span class="sxs-lookup"><span data-stu-id="bc674-198">Get-TypeData</span></span>](Get-TypeData.md)
<span data-ttu-id="bc674-199">Obtient les données de type étendu dans la session active.</span><span class="sxs-lookup"><span data-stu-id="bc674-199">Gets the extended type data in the current session.</span></span>

### [<span data-ttu-id="bc674-200">Get-UICulture</span><span class="sxs-lookup"><span data-stu-id="bc674-200">Get-UICulture</span></span>](Get-UICulture.md)
<span data-ttu-id="bc674-201">Obtient les paramètres de culture d’interface utilisateur actuels dans le système d’exploitation.</span><span class="sxs-lookup"><span data-stu-id="bc674-201">Gets the current UI culture settings in the operating system.</span></span>

### [<span data-ttu-id="bc674-202">Get-Unique</span><span class="sxs-lookup"><span data-stu-id="bc674-202">Get-Unique</span></span>](Get-Unique.md)
<span data-ttu-id="bc674-203">Retourne les éléments uniques d'une liste triée.</span><span class="sxs-lookup"><span data-stu-id="bc674-203">Returns unique items from a sorted list.</span></span>

### [<span data-ttu-id="bc674-204">Get-Uptime</span><span class="sxs-lookup"><span data-stu-id="bc674-204">Get-Uptime</span></span>](Get-Uptime.md)
<span data-ttu-id="bc674-205">Obtient le **TimeSpan** depuis le dernier démarrage.</span><span class="sxs-lookup"><span data-stu-id="bc674-205">Get the **TimeSpan** since last boot.</span></span>

### [<span data-ttu-id="bc674-206">Get-Variable</span><span class="sxs-lookup"><span data-stu-id="bc674-206">Get-Variable</span></span>](Get-Variable.md)
<span data-ttu-id="bc674-207">Obtient les variables dans la console active.</span><span class="sxs-lookup"><span data-stu-id="bc674-207">Gets the variables in the current console.</span></span>

### [<span data-ttu-id="bc674-208">Get-Verb</span><span class="sxs-lookup"><span data-stu-id="bc674-208">Get-Verb</span></span>](Get-Verb.md)
<span data-ttu-id="bc674-209">Obtient les verbes PowerShell approuvés.</span><span class="sxs-lookup"><span data-stu-id="bc674-209">Gets approved PowerShell verbs.</span></span>

### [<span data-ttu-id="bc674-210">Group-Object</span><span class="sxs-lookup"><span data-stu-id="bc674-210">Group-Object</span></span>](Group-Object.md)
<span data-ttu-id="bc674-211">Groupe les objets qui contiennent la même valeur pour les propriétés spécifiées.</span><span class="sxs-lookup"><span data-stu-id="bc674-211">Groups objects that contain the same value for specified properties.</span></span>

### [<span data-ttu-id="bc674-212">Import-Alias</span><span class="sxs-lookup"><span data-stu-id="bc674-212">Import-Alias</span></span>](Import-Alias.md)
<span data-ttu-id="bc674-213">Importe une liste d'alias à partir d'un fichier.</span><span class="sxs-lookup"><span data-stu-id="bc674-213">Imports an alias list from a file.</span></span>

### [<span data-ttu-id="bc674-214">Import-Clixml</span><span class="sxs-lookup"><span data-stu-id="bc674-214">Import-Clixml</span></span>](Import-Clixml.md)
<span data-ttu-id="bc674-215">Importe un fichier CLIXML et crée des objets correspondants dans PowerShell.</span><span class="sxs-lookup"><span data-stu-id="bc674-215">Imports a CLIXML file and creates corresponding objects in PowerShell.</span></span>

### [<span data-ttu-id="bc674-216">Import-Csv</span><span class="sxs-lookup"><span data-stu-id="bc674-216">Import-Csv</span></span>](Import-Csv.md)
<span data-ttu-id="bc674-217">Crée des objets personnalisés de type tableau à partir des éléments dans un fichier de valeurs séparées par des virgules (CSV).</span><span class="sxs-lookup"><span data-stu-id="bc674-217">Creates table-like custom objects from the items in a comma-separated value (CSV) file.</span></span>

### [<span data-ttu-id="bc674-218">Import-LocalizedData</span><span class="sxs-lookup"><span data-stu-id="bc674-218">Import-LocalizedData</span></span>](Import-LocalizedData.md)
<span data-ttu-id="bc674-219">Importe les données propres au langage dans les scripts et les fonctions basés sur la culture d'interface utilisateur sélectionnée pour le système d'exploitation.</span><span class="sxs-lookup"><span data-stu-id="bc674-219">Imports language-specific data into scripts and functions based on the UI culture that is selected for the operating system.</span></span>

### [<span data-ttu-id="bc674-220">Import-PowerShellDataFile</span><span class="sxs-lookup"><span data-stu-id="bc674-220">Import-PowerShellDataFile</span></span>](Import-PowerShellDataFile.md)
<span data-ttu-id="bc674-221">Importe des valeurs à partir d’un `.PSD1` fichier sans appeler son contenu.</span><span class="sxs-lookup"><span data-stu-id="bc674-221">Imports values from a `.PSD1` file without invoking its contents.</span></span>

### [<span data-ttu-id="bc674-222">Import-PSSession</span><span class="sxs-lookup"><span data-stu-id="bc674-222">Import-PSSession</span></span>](Import-PSSession.md)
<span data-ttu-id="bc674-223">Importe des commandes à partir d'une autre session dans la session active.</span><span class="sxs-lookup"><span data-stu-id="bc674-223">Imports commands from another session into the current session.</span></span>

### [<span data-ttu-id="bc674-224">Invoke-Expression</span><span class="sxs-lookup"><span data-stu-id="bc674-224">Invoke-Expression</span></span>](Invoke-Expression.md)
<span data-ttu-id="bc674-225">Exécute des commandes ou des expressions sur l'ordinateur local.</span><span class="sxs-lookup"><span data-stu-id="bc674-225">Runs commands or expressions on the local computer.</span></span>

### [<span data-ttu-id="bc674-226">Invoke-RestMethod</span><span class="sxs-lookup"><span data-stu-id="bc674-226">Invoke-RestMethod</span></span>](Invoke-RestMethod.md)
<span data-ttu-id="bc674-227">Envoie une demande HTTP ou HTTPS à un service web RESTful.</span><span class="sxs-lookup"><span data-stu-id="bc674-227">Sends an HTTP or HTTPS request to a RESTful web service.</span></span>

### [<span data-ttu-id="bc674-228">Invoke-WebRequest</span><span class="sxs-lookup"><span data-stu-id="bc674-228">Invoke-WebRequest</span></span>](Invoke-WebRequest.md)
<span data-ttu-id="bc674-229">Obtient le contenu d’une page Web sur Internet.</span><span class="sxs-lookup"><span data-stu-id="bc674-229">Gets content from a web page on the internet.</span></span>

### [<span data-ttu-id="bc674-230">Join-String</span><span class="sxs-lookup"><span data-stu-id="bc674-230">Join-String</span></span>](Join-String.md)
<span data-ttu-id="bc674-231">Combine des objets du pipeline en une chaîne unique.</span><span class="sxs-lookup"><span data-stu-id="bc674-231">Combines objects from the pipeline into a single string.</span></span>

### [<span data-ttu-id="bc674-232">Measure-Command</span><span class="sxs-lookup"><span data-stu-id="bc674-232">Measure-Command</span></span>](Measure-Command.md)
<span data-ttu-id="bc674-233">Mesure le temps nécessaire pour exécuter des applets de commande et des blocs de script.</span><span class="sxs-lookup"><span data-stu-id="bc674-233">Measures the time it takes to run script blocks and cmdlets.</span></span>

### [<span data-ttu-id="bc674-234">Measure-Object</span><span class="sxs-lookup"><span data-stu-id="bc674-234">Measure-Object</span></span>](Measure-Object.md)
<span data-ttu-id="bc674-235">Calcule les propriétés numériques des objets et les caractères, les mots et les lignes dans les objets de chaîne, par exemple les fichiers de texte.</span><span class="sxs-lookup"><span data-stu-id="bc674-235">Calculates the numeric properties of objects, and the characters, words, and lines in string objects, such as files of text.</span></span>

### [<span data-ttu-id="bc674-236">New-Alias</span><span class="sxs-lookup"><span data-stu-id="bc674-236">New-Alias</span></span>](New-Alias.md)
<span data-ttu-id="bc674-237">Crée un alias.</span><span class="sxs-lookup"><span data-stu-id="bc674-237">Creates a new alias.</span></span>

### [<span data-ttu-id="bc674-238">New-Event</span><span class="sxs-lookup"><span data-stu-id="bc674-238">New-Event</span></span>](New-Event.md)
<span data-ttu-id="bc674-239">Crée un événement.</span><span class="sxs-lookup"><span data-stu-id="bc674-239">Creates a new event.</span></span>

### [<span data-ttu-id="bc674-240">New-GUID</span><span class="sxs-lookup"><span data-stu-id="bc674-240">New-Guid</span></span>](New-Guid.md)
<span data-ttu-id="bc674-241">Crée un GUID.</span><span class="sxs-lookup"><span data-stu-id="bc674-241">Creates a GUID.</span></span>

### [<span data-ttu-id="bc674-242">New-Object</span><span class="sxs-lookup"><span data-stu-id="bc674-242">New-Object</span></span>](New-Object.md)
<span data-ttu-id="bc674-243">Crée une instance d'un objet Microsoft .NET Framework ou COM.</span><span class="sxs-lookup"><span data-stu-id="bc674-243">Creates an instance of a Microsoft .NET Framework or COM object.</span></span>

### [<span data-ttu-id="bc674-244">New-TemporaryFile</span><span class="sxs-lookup"><span data-stu-id="bc674-244">New-TemporaryFile</span></span>](New-TemporaryFile.md)
<span data-ttu-id="bc674-245">Crée un fichier temporaire.</span><span class="sxs-lookup"><span data-stu-id="bc674-245">Creates a temporary file.</span></span>

### [<span data-ttu-id="bc674-246">New-TimeSpan</span><span class="sxs-lookup"><span data-stu-id="bc674-246">New-TimeSpan</span></span>](New-TimeSpan.md)
<span data-ttu-id="bc674-247">Crée un objet TimeSpan.</span><span class="sxs-lookup"><span data-stu-id="bc674-247">Creates a TimeSpan object.</span></span>

### [<span data-ttu-id="bc674-248">New-Variable</span><span class="sxs-lookup"><span data-stu-id="bc674-248">New-Variable</span></span>](New-Variable.md)
<span data-ttu-id="bc674-249">Crée une variable.</span><span class="sxs-lookup"><span data-stu-id="bc674-249">Creates a new variable.</span></span>

### [<span data-ttu-id="bc674-250">Out-File</span><span class="sxs-lookup"><span data-stu-id="bc674-250">Out-File</span></span>](Out-File.md)
<span data-ttu-id="bc674-251">Envoie la sortie vers un fichier.</span><span class="sxs-lookup"><span data-stu-id="bc674-251">Sends output to a file.</span></span>

### [<span data-ttu-id="bc674-252">Out-GridView</span><span class="sxs-lookup"><span data-stu-id="bc674-252">Out-GridView</span></span>](Out-GridView.md)
<span data-ttu-id="bc674-253">Envoie la sortie vers un tableau interactif dans une fenêtre distincte.</span><span class="sxs-lookup"><span data-stu-id="bc674-253">Sends output to an interactive table in a separate window.</span></span>

### [<span data-ttu-id="bc674-254">Out-Printer</span><span class="sxs-lookup"><span data-stu-id="bc674-254">Out-Printer</span></span>](Out-Printer.md)
<span data-ttu-id="bc674-255">Envoie la sortie vers une imprimante.</span><span class="sxs-lookup"><span data-stu-id="bc674-255">Sends output to a printer.</span></span>

### [<span data-ttu-id="bc674-256">Out-String</span><span class="sxs-lookup"><span data-stu-id="bc674-256">Out-String</span></span>](Out-String.md)
<span data-ttu-id="bc674-257">Génère des objets d’entrée sous forme de chaînes.</span><span class="sxs-lookup"><span data-stu-id="bc674-257">Outputs input objects as a strings.</span></span>

### [<span data-ttu-id="bc674-258">Read-Host</span><span class="sxs-lookup"><span data-stu-id="bc674-258">Read-Host</span></span>](Read-Host.md)
<span data-ttu-id="bc674-259">Lit une ligne d'entrée de la console.</span><span class="sxs-lookup"><span data-stu-id="bc674-259">Reads a line of input from the console.</span></span>

### [<span data-ttu-id="bc674-260">Register-EngineEvent</span><span class="sxs-lookup"><span data-stu-id="bc674-260">Register-EngineEvent</span></span>](Register-EngineEvent.md)
<span data-ttu-id="bc674-261">S’abonne aux événements qui sont générés par le moteur PowerShell et par l’applet de commande `New-Event` .</span><span class="sxs-lookup"><span data-stu-id="bc674-261">Subscribes to events that are generated by the PowerShell engine and by the `New-Event` cmdlet.</span></span>

### [<span data-ttu-id="bc674-262">Register-ObjectEvent</span><span class="sxs-lookup"><span data-stu-id="bc674-262">Register-ObjectEvent</span></span>](Register-ObjectEvent.md)
<span data-ttu-id="bc674-263">S'abonne aux événements générés par un objet Microsoft .NET Framework.</span><span class="sxs-lookup"><span data-stu-id="bc674-263">Subscribes to the events that are generated by a Microsoft .NET Framework object.</span></span>

### [<span data-ttu-id="bc674-264">Remove-Alias</span><span class="sxs-lookup"><span data-stu-id="bc674-264">Remove-Alias</span></span>](Remove-Alias.md)
<span data-ttu-id="bc674-265">Supprimer un alias de la session active.</span><span class="sxs-lookup"><span data-stu-id="bc674-265">Remove an alias from the current session.</span></span>

### [<span data-ttu-id="bc674-266">Remove-Event</span><span class="sxs-lookup"><span data-stu-id="bc674-266">Remove-Event</span></span>](Remove-Event.md)
<span data-ttu-id="bc674-267">Supprime les événements de la file d'attente des événements.</span><span class="sxs-lookup"><span data-stu-id="bc674-267">Deletes events from the event queue.</span></span>

### [<span data-ttu-id="bc674-268">Remove-PSBreakpoint</span><span class="sxs-lookup"><span data-stu-id="bc674-268">Remove-PSBreakpoint</span></span>](Remove-PSBreakpoint.md)
<span data-ttu-id="bc674-269">Supprime les points d'arrêt de la console active.</span><span class="sxs-lookup"><span data-stu-id="bc674-269">Deletes breakpoints from the current console.</span></span>

### [<span data-ttu-id="bc674-270">Remove-TypeData</span><span class="sxs-lookup"><span data-stu-id="bc674-270">Remove-TypeData</span></span>](Remove-TypeData.md)
<span data-ttu-id="bc674-271">Supprime les types étendus de la session active.</span><span class="sxs-lookup"><span data-stu-id="bc674-271">Deletes extended types from the current session.</span></span>

### [<span data-ttu-id="bc674-272">Remove-Variable</span><span class="sxs-lookup"><span data-stu-id="bc674-272">Remove-Variable</span></span>](Remove-Variable.md)
<span data-ttu-id="bc674-273">Supprime une variable et sa valeur.</span><span class="sxs-lookup"><span data-stu-id="bc674-273">Deletes a variable and its value.</span></span>

### [<span data-ttu-id="bc674-274">Select-Object</span><span class="sxs-lookup"><span data-stu-id="bc674-274">Select-Object</span></span>](Select-Object.md)
<span data-ttu-id="bc674-275">Sélectionne des objets ou des propriétés d'objet.</span><span class="sxs-lookup"><span data-stu-id="bc674-275">Selects objects or object properties.</span></span>

### [<span data-ttu-id="bc674-276">Select-String</span><span class="sxs-lookup"><span data-stu-id="bc674-276">Select-String</span></span>](Select-String.md)
<span data-ttu-id="bc674-277">Recherche du texte dans des chaînes et des fichiers.</span><span class="sxs-lookup"><span data-stu-id="bc674-277">Finds text in strings and files.</span></span>

### [<span data-ttu-id="bc674-278">Select-Xml</span><span class="sxs-lookup"><span data-stu-id="bc674-278">Select-Xml</span></span>](Select-Xml.md)
<span data-ttu-id="bc674-279">Recherche du texte dans un document ou une chaîne XML.</span><span class="sxs-lookup"><span data-stu-id="bc674-279">Finds text in an XML string or document.</span></span>

### [<span data-ttu-id="bc674-280">Send-MailMessage</span><span class="sxs-lookup"><span data-stu-id="bc674-280">Send-MailMessage</span></span>](Send-MailMessage.md)
<span data-ttu-id="bc674-281">Envoie un e-mail.</span><span class="sxs-lookup"><span data-stu-id="bc674-281">Sends an email message.</span></span>

### [<span data-ttu-id="bc674-282">Set-Alias</span><span class="sxs-lookup"><span data-stu-id="bc674-282">Set-Alias</span></span>](Set-Alias.md)
<span data-ttu-id="bc674-283">Crée ou modifie un alias pour une applet de commande ou une autre commande dans la session PowerShell active.</span><span class="sxs-lookup"><span data-stu-id="bc674-283">Creates or changes an alias for a cmdlet or other command in the current PowerShell session.</span></span>

### [<span data-ttu-id="bc674-284">Set-Date</span><span class="sxs-lookup"><span data-stu-id="bc674-284">Set-Date</span></span>](Set-Date.md)
<span data-ttu-id="bc674-285">Définit l'heure système sur l'ordinateur sur une heure que vous spécifiez.</span><span class="sxs-lookup"><span data-stu-id="bc674-285">Changes the system time on the computer to a time that you specify.</span></span>

### [<span data-ttu-id="bc674-286">Set-MarkdownOption</span><span class="sxs-lookup"><span data-stu-id="bc674-286">Set-MarkdownOption</span></span>](Set-MarkdownOption.md)
<span data-ttu-id="bc674-287">Définit les couleurs et les styles utilisés pour le rendu du contenu de la démarque dans la console.</span><span class="sxs-lookup"><span data-stu-id="bc674-287">Sets the colors and styles used for rendering Markdown content in the console.</span></span>

### [<span data-ttu-id="bc674-288">Set-PSBreakpoint</span><span class="sxs-lookup"><span data-stu-id="bc674-288">Set-PSBreakpoint</span></span>](Set-PSBreakpoint.md)
<span data-ttu-id="bc674-289">Définit un point d'arrêt sur une ligne, une commande ou une variable.</span><span class="sxs-lookup"><span data-stu-id="bc674-289">Sets a breakpoint on a line, command, or variable.</span></span>

### [<span data-ttu-id="bc674-290">Set-TraceSource</span><span class="sxs-lookup"><span data-stu-id="bc674-290">Set-TraceSource</span></span>](Set-TraceSource.md)
<span data-ttu-id="bc674-291">Configure, démarre et arrête un suivi des composants PowerShell.</span><span class="sxs-lookup"><span data-stu-id="bc674-291">Configures, starts, and stops a trace of PowerShell components.</span></span>

### [<span data-ttu-id="bc674-292">Set-Variable</span><span class="sxs-lookup"><span data-stu-id="bc674-292">Set-Variable</span></span>](Set-Variable.md)
<span data-ttu-id="bc674-293">Définit la valeur d'une variable.</span><span class="sxs-lookup"><span data-stu-id="bc674-293">Sets the value of a variable.</span></span> <span data-ttu-id="bc674-294">Crée la variable si celle avec le nom demandé n'existe pas.</span><span class="sxs-lookup"><span data-stu-id="bc674-294">Creates the variable if one with the requested name does not exist.</span></span>

### [<span data-ttu-id="bc674-295">Show-Command</span><span class="sxs-lookup"><span data-stu-id="bc674-295">Show-Command</span></span>](Show-Command.md)
<span data-ttu-id="bc674-296">Affiche des informations de commande PowerShell dans une fenêtre graphique.</span><span class="sxs-lookup"><span data-stu-id="bc674-296">Displays PowerShell command information in a graphical window.</span></span>

### [<span data-ttu-id="bc674-297">Show-Markdown</span><span class="sxs-lookup"><span data-stu-id="bc674-297">Show-Markdown</span></span>](Show-Markdown.md)
<span data-ttu-id="bc674-298">Affiche un fichier de démarque ou une chaîne dans la console d’une manière conviviale à l’aide de séquences d’échappement VT100 ou dans un navigateur à l’aide de HTML.</span><span class="sxs-lookup"><span data-stu-id="bc674-298">Shows a Markdown file or string in the console in a friendly way using VT100 escape sequences or in a browser using HTML.</span></span>

### [<span data-ttu-id="bc674-299">Sort-Object</span><span class="sxs-lookup"><span data-stu-id="bc674-299">Sort-Object</span></span>](Sort-Object.md)
<span data-ttu-id="bc674-300">Trie les objets selon les valeurs de propriété.</span><span class="sxs-lookup"><span data-stu-id="bc674-300">Sorts objects by property values.</span></span>

### [<span data-ttu-id="bc674-301">Start-Sleep</span><span class="sxs-lookup"><span data-stu-id="bc674-301">Start-Sleep</span></span>](Start-Sleep.md)
<span data-ttu-id="bc674-302">Interrompt l'activité dans un script ou une session pour la période spécifiée.</span><span class="sxs-lookup"><span data-stu-id="bc674-302">Suspends the activity in a script or session for the specified period of time.</span></span>

### [<span data-ttu-id="bc674-303">Tee-Object</span><span class="sxs-lookup"><span data-stu-id="bc674-303">Tee-Object</span></span>](Tee-Object.md)
<span data-ttu-id="bc674-304">Enregistre la sortie de la commande dans un fichier ou dans une variable, puis l'envoie dans le pipeline.</span><span class="sxs-lookup"><span data-stu-id="bc674-304">Saves command output in a file or variable and also sends it down the pipeline.</span></span>

### [<span data-ttu-id="bc674-305">Test-Json</span><span class="sxs-lookup"><span data-stu-id="bc674-305">Test-Json</span></span>](Test-Json.md)
<span data-ttu-id="bc674-306">Teste si une chaîne est un document JSON valide</span><span class="sxs-lookup"><span data-stu-id="bc674-306">Tests whether a string is a valid JSON document</span></span>

### [<span data-ttu-id="bc674-307">Trace-Command</span><span class="sxs-lookup"><span data-stu-id="bc674-307">Trace-Command</span></span>](Trace-Command.md)
<span data-ttu-id="bc674-308">Configure et démarre un suivi de la commande ou de l'expression spécifiée.</span><span class="sxs-lookup"><span data-stu-id="bc674-308">Configures and starts a trace of the specified expression or command.</span></span>

### [<span data-ttu-id="bc674-309">Unblock-File</span><span class="sxs-lookup"><span data-stu-id="bc674-309">Unblock-File</span></span>](Unblock-File.md)
<span data-ttu-id="bc674-310">Débloque les fichiers téléchargés depuis Internet.</span><span class="sxs-lookup"><span data-stu-id="bc674-310">Unblocks files that were downloaded from the Internet.</span></span>

### [<span data-ttu-id="bc674-311">Unregister-Event</span><span class="sxs-lookup"><span data-stu-id="bc674-311">Unregister-Event</span></span>](Unregister-Event.md)
<span data-ttu-id="bc674-312">Annule un abonnement aux événements.</span><span class="sxs-lookup"><span data-stu-id="bc674-312">Cancels an event subscription.</span></span>

### [<span data-ttu-id="bc674-313">Update-FormatData</span><span class="sxs-lookup"><span data-stu-id="bc674-313">Update-FormatData</span></span>](Update-FormatData.md)
<span data-ttu-id="bc674-314">Met à jour les données de mise en forme dans la session active.</span><span class="sxs-lookup"><span data-stu-id="bc674-314">Updates the formatting data in the current session.</span></span>

### [<span data-ttu-id="bc674-315">Update-List</span><span class="sxs-lookup"><span data-stu-id="bc674-315">Update-List</span></span>](Update-List.md)
<span data-ttu-id="bc674-316">Ajoute et supprime des éléments dans une valeur de propriété qui contient une collection d'objets.</span><span class="sxs-lookup"><span data-stu-id="bc674-316">Adds items to and removes items from a property value that contains a collection of objects.</span></span>

### [<span data-ttu-id="bc674-317">Update-TypeData</span><span class="sxs-lookup"><span data-stu-id="bc674-317">Update-TypeData</span></span>](Update-TypeData.md)
<span data-ttu-id="bc674-318">Met à jour les données de type étendu dans la session.</span><span class="sxs-lookup"><span data-stu-id="bc674-318">Updates the extended type data in the session.</span></span>

### [<span data-ttu-id="bc674-319">Wait-Debugger</span><span class="sxs-lookup"><span data-stu-id="bc674-319">Wait-Debugger</span></span>](Wait-Debugger.md)
<span data-ttu-id="bc674-320">Arrête un script dans le débogueur avant d’exécuter l’instruction suivante dans le script.</span><span class="sxs-lookup"><span data-stu-id="bc674-320">Stops a script in the debugger before running the next statement in the script.</span></span>

### [<span data-ttu-id="bc674-321">Wait-Event</span><span class="sxs-lookup"><span data-stu-id="bc674-321">Wait-Event</span></span>](Wait-Event.md)
<span data-ttu-id="bc674-322">Attend qu'un événement particulier soit déclenché avant de poursuivre son exécution.</span><span class="sxs-lookup"><span data-stu-id="bc674-322">Waits until a particular event is raised before continuing to run.</span></span>

### [<span data-ttu-id="bc674-323">Write-Debug</span><span class="sxs-lookup"><span data-stu-id="bc674-323">Write-Debug</span></span>](Write-Debug.md)
<span data-ttu-id="bc674-324">Écrit un message de débogage dans la console.</span><span class="sxs-lookup"><span data-stu-id="bc674-324">Writes a debug message to the console.</span></span>

### [<span data-ttu-id="bc674-325">Écriture-erreur</span><span class="sxs-lookup"><span data-stu-id="bc674-325">Write-Error</span></span>](Write-Error.md)
<span data-ttu-id="bc674-326">Écrit un objet dans le flux d'erreurs.</span><span class="sxs-lookup"><span data-stu-id="bc674-326">Writes an object to the error stream.</span></span>

### [<span data-ttu-id="bc674-327">Write-Host</span><span class="sxs-lookup"><span data-stu-id="bc674-327">Write-Host</span></span>](Write-Host.md)
<span data-ttu-id="bc674-328">Écrit la sortie personnalisée sur un hôte.</span><span class="sxs-lookup"><span data-stu-id="bc674-328">Writes customized output to a host.</span></span>

### [<span data-ttu-id="bc674-329">Write-Information</span><span class="sxs-lookup"><span data-stu-id="bc674-329">Write-Information</span></span>](Write-Information.md)
<span data-ttu-id="bc674-330">Spécifie la manière dont PowerShell gère les données de flux d’informations pour une commande.</span><span class="sxs-lookup"><span data-stu-id="bc674-330">Specifies how PowerShell handles information stream data for a command.</span></span>

### [<span data-ttu-id="bc674-331">Write-Output</span><span class="sxs-lookup"><span data-stu-id="bc674-331">Write-Output</span></span>](Write-Output.md)
<span data-ttu-id="bc674-332">Envoie les objets spécifiés à la commande suivante du pipeline.</span><span class="sxs-lookup"><span data-stu-id="bc674-332">Sends the specified objects to the next command in the pipeline.</span></span> <span data-ttu-id="bc674-333">Si la commande est la dernière commande du pipeline, les objets sont affichés sur la console.</span><span class="sxs-lookup"><span data-stu-id="bc674-333">If the command is the last command in the pipeline, the objects are displayed in the console.</span></span>

### [<span data-ttu-id="bc674-334">Write-Progress</span><span class="sxs-lookup"><span data-stu-id="bc674-334">Write-Progress</span></span>](Write-Progress.md)
<span data-ttu-id="bc674-335">Affiche une barre de progression dans une fenêtre de commande PowerShell.</span><span class="sxs-lookup"><span data-stu-id="bc674-335">Displays a progress bar within a PowerShell command window.</span></span>

### [<span data-ttu-id="bc674-336">Write-Verbose</span><span class="sxs-lookup"><span data-stu-id="bc674-336">Write-Verbose</span></span>](Write-Verbose.md)
<span data-ttu-id="bc674-337">Écrit du texte dans le flux de message détaillé.</span><span class="sxs-lookup"><span data-stu-id="bc674-337">Writes text to the verbose message stream.</span></span>

### [<span data-ttu-id="bc674-338">Write-Warning</span><span class="sxs-lookup"><span data-stu-id="bc674-338">Write-Warning</span></span>](Write-Warning.md)
<span data-ttu-id="bc674-339">Écrit un message d'avertissement.</span><span class="sxs-lookup"><span data-stu-id="bc674-339">Writes a warning message.</span></span>
